--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
     <div id="relogio">23:59:30</div>
     <div id="data">QUA, 01/09/20</div>
 
-    <script src="script.js">
-        
-    </script>
+    <script src="script.js"></script>
 
     <h3> <a href="https://github.com/purplehxrizxn" target="_blank">GitHub</a> | <a href="https://facebook.com/gabrielpanzeri" target="_blank">Facebook</a></h3>
 </body>
