--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital Clock</title>
-    <link rel="stylesheet" href="../sources/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body id="corpo">
 
@@ -13,6 +13,6 @@
 
     <script src="script.js"></script>
 
-    <h3> <a href="https://github.com/purplehxrizxn" target="_blank">GitHub</a> | <a href="https://facebook.com/gabrielpanzeri" target="_blank">Facebook</a></h3>
+    <p> <a href="https://github.com/purplehxrizxn" target="_blank">GitHub</a> | <a href="https://facebook.com/gabrielpanzeri" target="_blank">Facebook</a></p>
 </body>
 </html>
